# django-plottings

./: .flake8  .readthedocs.yaml  AUTHORS  LICENSE  Makefile  POETRY_MIGRATION.md  README.md  poetry.toml  pyproject.toml  tox.ini
.github/workflows/: publish.yml  test.yml
docs/: conf.py  contributing.rst  development.rst  index.rst  reference.rst  requirements.txt  tutorials.rst  userguide.rst
plottings/: __init__.py  apps.py  base.py  content.py  file.py  memory.py  utils.py  value.py  views.py
plottings/plots/: activity.py
plottings/tests/: __init__.py  plots.py
plottings/views/: __init__.py  base.py
test_app/: README.md  manage.py  requirements.txt
test_app/plottings_tests/: .views.py.swo  .views.py.swp  apps.py  data.py  models.py  plots.py  urls.py  utils.py  views.py
test_app/plottings_tests/migrations/: 0001_initial.py
test_app/plottings_tests/plots/: .activity.py.swp  activity.py  utils.py
test_app/plottings_tests/templates/: main.html
test_app/plottings_tests/tests/: .test_plottings.py.swo  test_cache.py  test_plots.py  test_plottings.py  test_view.py
test_app/test_app/: asgi.py  settings.py  urls.py  wsgi.py
