[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "django-plottings"
authors = [{name = "Jorge Monforte Gonzalez", email = "yo@llou.net"}]
readme = "README.md"
dynamic = ["version", "description"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Environment :: Web Environment",
	"License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "django",
    "numpy",
    "matplotlib",
]

[project.urls]
Home = "https://github.com/llou/django-plottings"
Documentation = "https://django-plottings.readthedocs.io/en/latest/"

[tool.flit.module]
name  = "plottings"
