[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "django-plottings"
authors = [{name = "Jorge Monforte Gonzalez", email = "yo@llou.net"}]
readme = "README.md"
description = "A library to generate Matplotlib graphics within Django applications"
dynamic = ["version"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Environment :: Web Environment",
	"License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "django>=3.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
]

[project.urls]
Home = "https://github.com/llou/django-plottings"
Documentation = "https://django-plottings.readthedocs.io/en/latest/"

[tool.flit.module]
name  = "plottings"
